Avoid ui-router resolve sections which break the DI, and other stuff

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 $body-background-color: #2c2c2c;
 $accent-color: #e34a4c;
 $primary-color: #4b9a3e;
-$loading-bar-color: $primary-color;
+$loading-bar-color: #ffffff;
 
 $left-sidenav-width: 170px;
 
